# shiori-bookmark

./: README.md  pyproject.toml
shiori_bookmark/: __main__.py  bookmarks.py  config.py  dmenu.py
