[tool.poetry]
name = "shiori-bookmark"
version = "0.1.0"
description = "Simple bookmark manager"
authors = ["nikohonu <nikohonu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
shiori = 'shiori_bookmark.__main__:main'
