[tool.poetry]
name = "shiori-bookmark"
version = "0.1.0"
description = "Simple bookmark manager"
authors = ["nikohonu <nikohonu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.10.1"
pylint = "^3.1.0"
python-lsp-ruff = "^2.2.0"
python-lsp-black = "^2.0.0"
python-lsp-isort = "^0.1"
pylsp-mypy = "^0.6.8"
pyflakes = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
shiori = 'shiori_bookmark.__main__:main'
